get project information componet